--- a/docker/emod_exe_alt/Dockerfile
+++ b/docker/emod_exe_alt/Dockerfile
@@ -6,7 +6,8 @@ RUN dnf install python-devel -y
 RUN dnf install mpich-devel -y
 RUN dnf install sqlite-devel -y
 RUN dnf install git -y
-RUN dnf groupinstall 'Development Tools' -y
+RUN dnf install glibc-devel -y
+RUN dnf install gcc-c++ -y
 RUN dnf clean all
 #
 RUN python3 -m pip install pip --upgrade
@@ -15,6 +16,9 @@ RUN python3 -m pip install scons
 #
 ARG USER=DockerComposeUser
 ARG PATH=$PATH:/usr/lib64/mpich/bin
+ARG LD_LIBRARY_PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/lib64/mpich/bin
+RUN echo $PATH
+RUN echo $LD_LIBRARY_PATH
 #
 RUN git clone https://github.com/EMOD-Hub/EMOD-Generic
 #
