--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,13 +1,5 @@
-sphinx
-pydata-sphinx-theme
-sphinxcontrib-napoleon
-plantweb~=1.2
-sphinxcontrib-programoutput~=0.17
-nbsphinx~=0.9
-jupyterlab~=4.0
-myst-parser~=2.0
-readthedocs-sphinx-search~=0.3
-sphinx-copybutton~=0.5
-pygithub~=1.57
-sphinxext.remoteliteralinclude~=0.4
-sphinxcontrib-jquery~=4.1
+mkdocs-material
+mkdocs-include-markdown-plugin
+mkdocstrings-python
+mkdocs-autoapi
+mkdocs-glightbox
