--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,7 +16,10 @@ mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: true
 
-# Optionally set the version of Python and requirements required to build your docs
+# Set the requirements required to build your docs
 python:
   install:
-    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
