--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,5 +30,8 @@ Homepage = "https://github.com/EMOD-Hub/EMOD-Generic-Scripts"
 requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+packages = []
+
 [tool.setuptools_scm]
 version_file = "docs/version.py"
