Use image from Docker hub for work item

--- a/docker/emodpy/Dockerfile
+++ b/docker/emodpy/Dockerfile
@@ -9,7 +9,9 @@ RUN apt-get -y install python3-venv
 #
 RUN apt-get clean
 #
-RUN python3 -m venv py_env
+ENV PY_VENV=/py_env
+RUN python3 -m venv $PY_VENV
+ENV PATH="$PY_VENV/bin:$PATH"
 #
-RUN py_env/bin/pip3 install pip             --upgrade
-RUN py_env/bin/pip3 install emodpy==2.1.0   --extra-index-url https://packages.idmod.org/api/pypi/pypi-production/simple
+RUN pip3 install pip             --upgrade
+RUN pip3 install emodpy==2.1.0   --extra-index-url https://packages.idmod.org/api/pypi/pypi-production/simple
