Docs icons update

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,7 +95,7 @@ extra:
       href: "https://www.gatesfoundation.org/Terms-of-Use"
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/EMOD-Hub/emod-api
+      link: https://github.com/EMOD-Hub/EMOD-Generic-Scripts
     - icon: fontawesome/regular/envelope
       link: mailto:idm@gatesfoundation.org
     - icon: octicons/globe-24
