--- a/.github/workflows/mkdocs_deploy.yml
+++ b/.github/workflows/mkdocs_deploy.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   build-docs:
+    name: Build docs
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -35,6 +36,7 @@ jobs:
           path: site/
 
   deploy-docs:
+    name: Deploy docs
     runs-on: ubuntu-latest
     environment:
       name: github-pages
