--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,7 +109,7 @@ extra:
       link: https://gatesfoundation.enterprise.slack.com/
   analytics:
     provider: custom
-    tracking_id: GTM-NK4K647
+    property: GTM-NK4K647
     feedback:
       title: Was this page helpful?
       ratings:
