--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: EMOD-Generic-Scripts Documentation
+site_name: EMOD-Generic-Scripts
 site_url: https://emod-hub.github.io/emod-generic-scripts/
 repo_name: EMOD-Hub/EMOD-Generic-Scripts
 repo_url: https://github.com/EMOD-Hub/EMOD-Generic-Scripts/
